--- a/css/sass/plugins/_plugins.scss
+++ b/css/sass/plugins/_plugins.scss
@@ -3,7 +3,7 @@
 /*-----------------------------------------------------------------------------------*/
 
 // FAU_Person
-@import "plugin-fau_person";
+@import "fau-person";
 
 // Flexslider
 @import "plugin-flexslider";
