--- a/css/sass/structure/_social-media.scss
+++ b/css/sass/structure/_social-media.scss
@@ -95,3 +95,17 @@
 	} 
  
 }
+
+@media (max-width: $breakMD) {
+    #social {
+	    margin: 0 -15px;
+	    padding: 20px 15px;
+    }
+}
+@media (max-width: $breakLG) {
+
+	#social iframe {
+		width: 165px !important;
+		height: 120px !important;
+	}
+}
