--- a/css/sass/structure/navigation/_navigation.scss
+++ b/css/sass/structure/navigation/_navigation.scss
@@ -16,9 +16,12 @@
 // Submenus und Page Menu
 @import "subnav";
 
-
 // Top-Links
 @import "top-links";
+
+// Top-Links
+@import "logos-menu";
+
 
 
 
