--- a/css/sass/structure/content/_event-items.scss
+++ b/css/sass/structure/content/_event-items.scss
@@ -187,3 +187,15 @@
 
 
 
+@media (max-width: $breakMD) {
+	#content .widget_event_widget .event-info {
+		margin-left: 60px;
+	}
+	.topevent-date,
+	.topevent-description {
+		margin-left: 15px;
+		margin-right: 15px;
+	}
+
+
+}
