--- a/css/sass/structure/content/_global.scss
+++ b/css/sass/structure/content/_global.scss
@@ -5,35 +5,7 @@
 
 #content {
 	padding: 20px 0 30px 0;
-	
-	.wp-caption {
-		max-width: 100%;
-	}
-	
-	img {
-		@include box-shadow(0 1px 2px rgba(0,0,0,0.3));
-		max-width: 100%;
-				
-		&.shadow {
-		    @include box-shadow(4px 4px 4px rgba(0, 0, 0, 0.5));
-		}
-		&.thickborder {
-		    border: 1px solid black;
-		    @include border-radius(2px);
-		}
-	}
 
-	.logos-menu .logo-item img {
-		@include box-shadow(none);
-	}
-	
-	img.error-siegel {
-		@include box-shadow(none);
-		margin: 0 auto;
-		display: block;
-	}
-	
-	
 	main {
 	    font-size: 15px;
 	    line-height: 22px;
@@ -44,8 +16,90 @@
 		font-size: 13px;
 		line-height: 18px;
 	    }
-	    
-	    
+	}
+}
+
+
+@media (max-width: $breakXS) {
+
+    .page-template-page-start .span3 {
+	float: none;
+    }
+
+}
+
+@media (max-width: $breakSM) {
+  
+    #content {
+	padding-bottom: 0;
+    }
+   
+    .page-template-page-start-sub  {
+	&.js-enabled #hero {
+	    .banner {
+		top: 0;
+		bottom: 0;
+	    }
+	}
+    }
+    
+
+    .page-template-page-start {
+	.span3 {
+	    width: 240px;  
+	    float: left;
+	    margin-left: 0px;
 	}
 	
+	.span6 {
+	    width: #{$breakSM - 10}px;
+	    padding: 10px;
+	}
+	
+    } 
+
+}
+
+
+
+@media (max-width: $breakMD) {
+
+	#content {
+	    margin-left: 15px;
+	    margin-right: 15px;
+	    padding-bottom: 0px;
+	     
+	    ul.page-print-actions {
+		display: none;
+	    }
+	   
+	    .container {
+			.span12 {
+			    margin-left: 0;
+			}
+	    }
+
+	}
+	.span3 {
+		width: 260px; 
+		float: left;
+		margin-left: 20px;
+	}
+	         
+	.span6 {
+		width: #{$breakMD - 10}px;
+		padding: 10px;
+	}
+	.span12 {
+		margin-left: 20px;
+	}  
+
+}
+
+@media (max-width: $breakLG) {
+
+	#content ul.page-print-actions {
+		top: 440px;
+	}
+
 }
