--- a/css/sass/admin.scss
+++ b/css/sass/admin.scss
@@ -1,9 +1,10 @@
-/* 
- *  Backend CSS
- */
+/*-----------------------------------------------------------------------------------*/
+/* Backend CSS
+/*-----------------------------------------------------------------------------------*/
 
 // jQuery UI fuer das Backend
-@import "includes/jquery-ui";
+
+@import "frameworks/jquery-ui";
 
 
 
