--- a/css/sass/_reset.scss
+++ b/css/sass/_reset.scss
@@ -1,3 +1,8 @@
+/*-----------------------------------------------------------------------------------*/
+/* Resets styles to base
+/*-----------------------------------------------------------------------------------*/
+
+
 .clear {
 	clear: both;
 }
@@ -92,19 +97,7 @@ sub {
 	bottom: -0.25em;
 }
 
-img {
-	width: auto\9;
-	height: auto;
-	max-width: 100%;
-	vertical-align: middle;
-	border: 0;
-	-ms-interpolation-mode: bicubic;
-}
 
-#map_canvas img,
-.google-maps img {
-	max-width: none;
-}
 
 button,
 input,
@@ -182,166 +175,6 @@ a:focus {
 	text-decoration: underline;
 }
 
-.img-rounded {
-	-webkit-border-radius: 6px;
-	-moz-border-radius: 6px;
-	border-radius: 6px;
-}
-
-.img-polaroid {
-	padding: 4px;
-	background-color: #fff;
-	border: 1px solid #ccc;
-	border: 1px solid rgba(0, 0, 0, 0.2);
-	-webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
-	-moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
-	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
-}
-
-.img-circle {
-	-webkit-border-radius: 500px;
-	-moz-border-radius: 500px;
-	border-radius: 500px;
-}
-
-.row {
-	margin-left: -20px;
-	*zoom: 1;
-}
-
-.row:before,
-.row:after {
-	display: table;
-	line-height: 0;
-	content: "";
-}
-
-.row:after {
-	clear: both;
-}
-
-[class*="span"] {
-	float: left;
-	min-height: 1px;
-	margin-left: 20px;
-}
-
-.container {
-	width: 940px;
-}
-
-.span12 {
-	width: 940px;
-}
-
-.span11 {
-	width: 860px;
-}
-
-.span10 {
-	width: 780px;
-}
-
-.span9 {
-	width: 700px;
-}
-
-.span8 {
-	width: 620px;
-}
-
-.span7 {
-	width: 540px;
-}
-
-.span6 {
-	width: 460px;
-}
-
-.span5 {
-	width: 380px;
-}
-
-.span4 {
-	width: 300px;
-}
-
-.span3 {
-	width: 220px;
-}
-
-.span2 {
-	width: 140px;
-}
-
-.span1 {
-	width: 60px;
-}
-
-.offset12 {
-	margin-left: 980px;
-}
-
-.offset11 {
-	margin-left: 900px;
-}
-
-.offset10 {
-	margin-left: 820px;
-}
-
-.offset9 {
-	margin-left: 740px;
-}
-
-.offset8 {
-	margin-left: 660px;
-}
-
-.offset7 {
-	margin-left: 580px;
-}
-
-.offset6 {
-	margin-left: 500px;
-}
-
-.offset5 {
-	margin-left: 420px;
-}
-
-.offset4 {
-	margin-left: 340px;
-}
-
-.offset3 {
-	margin-left: 260px;
-}
-
-.offset2 {
-	margin-left: 180px;
-}
-
-.offset1 {
-	margin-left: 100px;
-}
-
-.container {
-	margin-right: auto;
-	margin-left: auto;
-	*zoom: 1;
-}
-
-.container:before,
-.container:after {
-	display: table;
-	line-height: 0;
-	content: "";
-}
-
-.container:after {
-	clear: both;
-}
 
 p {
 	margin: 10px 0 5px 0;
@@ -813,35 +646,7 @@ table th[class*="span"] {
 	margin-left: 0;
 }
 
-.accordion {
-	margin-bottom: 20px;
-}
 
-.accordion-group {
-	margin-bottom: 2px;
-	border: 1px solid #e5e5e5;
-	-webkit-border-radius: 4px;
-	-moz-border-radius: 4px;
-	border-radius: 4px;
-}
-
-.accordion-heading {
-	border-bottom: 0;
-}
-
-.accordion-heading .accordion-toggle {
-	display: block;
-	padding: 8px 15px;
-}
-
-.accordion-toggle {
-	cursor: pointer;
-}
-
-.accordion-inner {
-	padding: 9px 15px;
-	border-top: 1px solid #e5e5e5;
-}
 
 .pull-right {
 	float: right;
@@ -861,149 +666,4 @@ table th[class*="span"] {
 
 .invisible {
 	visibility: hidden;
-}
-
-
-@media (min-width: $breakMD) and (max-width: $breakLG) {
-	.row {
-		margin-left: -20px;
-		*zoom: 1;
-	}
-	.row:before,
-	.row:after {
-		display: table;
-		line-height: 0;
-		content: "";
-	}
-	.row:after {
-		clear: both;
-	}
-	[class*="span"] {
-		float: left;
-		min-height: 1px;
-		margin-left: 20px;
-	}
-	.container {
-		width: 724px;
-	}
-	.span12 {
-		width: 724px;
-	}
-	.span11 {
-		width: 662px;
-	}
-	.span10 {
-		width: 600px;
-	}
-	.span9 {
-		width: 538px;
-	}
-	.span8 {
-		width: 476px;
-	}
-	.span7 {
-		width: 414px;
-	}
-	.span6 {
-		width: 352px;
-	}
-	.span5 {
-		width: 290px;
-	}
-	.span4 {
-		width: 228px;
-	}
-	.span3 {
-		width: 166px;
-	}
-	.span2 {
-		width: 104px;
-	}
-	.span1 {
-		width: 42px;
-	}
-	.span-sm-4 {
-		width: 220px;
-	}
-	.span-sm-8, .span-sm-8 .span9 {
-		width: 484px;
-	}
-	.offset12 {
-		margin-left: 764px;
-	}
-	.offset11 {
-		margin-left: 702px;
-	}
-	.offset10 {
-		margin-left: 640px;
-	}
-	.offset9 {
-		margin-left: 578px;
-	}
-	.offset8 {
-		margin-left: 516px;
-	}
-	.offset7 {
-		margin-left: 454px;
-	}
-	.offset6 {
-		margin-left: 392px;
-	}
-	.offset5 {
-		margin-left: 330px;
-	}
-	.offset4 {
-		margin-left: 268px;
-	}
-	.offset3 {
-		margin-left: 206px;
-	}
-	.offset2 {
-		margin-left: 144px;
-	}
-	.offset1 {
-		margin-left: 82px;
-	}
-	input,
-	textarea {
-		margin-left: 0;
-	}
-
-}
-
-@media (max-width: $breakMD) {
-	body {
-		padding-right: 20px;
-		padding-left: 20px;
-	}
-	.container {
-		width: auto;
-	}
-	.row {
-		margin-left: 0;
-	}
-	[class*="span"],
-	.span-sm-4,
-	.span-sm-8, 
-	.span-sm-8 .span9 {
-		margin-left: 0;
-		float: none;
-		width: auto;
-	}
-	
-}
-
-@media (max-width: $breakMD) {
-	input[type="checkbox"],
-	input[type="radio"] {
-		border: 1px solid #ccc;
-	}
-
-}
-
-@media (max-width: $breakLG) {
-	body {
-		padding-top: 0;
-	}
-
 }
