--- a/css/sass/_variables.scss
+++ b/css/sass/_variables.scss
@@ -1,14 +1,30 @@
+//-----------------------------------------------------------------------------------*/
+// Konstanten fuer das Design
+//-----------------------------------------------------------------------------------*/
 
-// Konstante fuer das Design
  $farbfamilie: 'zuv';
     // med, phil, nat, rw, tf, zuv 
 
     
 // Define breakpoints
+
+// iPhone 3G
 $breakXS:   320px;
+// M8, Google, small others
 $breakSM:   480px;
+// iPad
 $breakMD:   767px;
+// iPad
 $breakLG:   979px;
+// for small desktop up to 1200 pc or 1280 macbook air
+$break-1060:   1060px;
+// for larger desktop up to 1400 or macbook pro 1440
+$break-1360:	1360px;
+// for larger screen up to 1800px
+$break-1700:	1760px;
+// for 4k screens (2200px and more)
+$break-2200:	2200px;
+
 
 // Define fonts
 $fontStack: 'roboto', "Helvetica Neue", Helvetica, Arial, sans-serif;
