--- a/css/sass/base.scss
+++ b/css/sass/base.scss
@@ -1,20 +1,22 @@
-/*
-Main CSS File for Wordpress Theme FAU
-*/
+/*-----------------------------------------------------------------------------------*/
+/* Main CSS File for Wordpress Theme FAU
+/*-----------------------------------------------------------------------------------*/
 
 // Import FAU variables
 @import "variables";
 
-// Import Grid System, Mixins, Webfonts and Helper Classes
-@import "includes/bootstrap";
-@import "includes/bootstrap_colgrids";
+// Reset Base styles
+@import "reset";
+
+// Framework
+@import "frameworks/frameworks";
 
 
-@import "includes/mixins";
-@import "includes/fonts";
-@import "includes/font-awesome";
-// @import "includes/font-justvector";
-@import "includes/helpers";
+// Mixins
+@import "mixins/mixins";
+
+// Fonts
+@import "fonts/fonts";
 
 
 // Structure
