--- a/css/sass/editor-style.scss
+++ b/css/sass/editor-style.scss
@@ -1,30 +1,18 @@
-/*
-Theme Name: FAU
-Theme URI: www.fau.de
-Author: RRZE Webteam
-Author URI: http://www.rrze.fau.de
-Description: Friedrich-Alexander-Universität Erlangen-Nürnberg
-Version: 1.0
-License: GNU General Public License v2 or later
-License URI: http://www.gnu.org/licenses/gpl-2.0.html
-Tags: blue
-Text Domain: FAU
-*/
+/*-----------------------------------------------------------------------------------*/
+/* Editor Style CSS
+/*-----------------------------------------------------------------------------------*/
+
 
 // Import FAU variables
 @import "variables";
-
-// Import Grid System, Mixins, Webfonts and Helper Classes
-@import "includes/bootstrap";
-@import "includes/bootstrap_colgrids";
-@import "includes/mixins";
-@import "includes/fonts";
-@import "includes/font-awesome";
-@import "includes/helpers";
-
-// Import Main Stylings relevant for RTE
-
-
+// Reset Base styles
+@import "reset";
+// Framework
+@import "frameworks/frameworks";
+// Mixins
+@import "mixins/mixins";
+// Fonts
+@import "fonts/fonts";
 // Element Styles
 @import "elements/elements";
 
