--- a/css/sass/structure/content/_global.scss
+++ b/css/sass/structure/content/_global.scss
@@ -4,8 +4,11 @@
 
 
 #content {
-	padding: 20px 0 30px 0;
-
+    padding: 20px 0 30px 0;
+    
+    .container {
+	position: relative;
+    }
 	main {
 	    font-size: 15px;
 	    line-height: 22px;
