Stabile Version zur produktiven Nutzung, ohne neues Gridsystem

--- a/css/sass/fonts/_fonts.scss
+++ b/css/sass/fonts/_fonts.scss
@@ -3,7 +3,7 @@
 /*-----------------------------------------------------------------------------------*/
 
 
-// Awesome Font fpr Symbols
+// Awesome Font for Symbols
 @import "awesome";
 
 // Roboto Font
